Fix hard-to-click items on mobile

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -70,21 +70,17 @@ ul {
 
     .item-edit, label, input[type=checkbox] {
       cursor: pointer;
-    }
-
-    input[type=checkbox] {
-      margin-right: 10px;
+      padding: 10px;
     }
 
     label {
-      margin-top: 3px;
-      margin-bottom: 0;
+      margin: -7px 0 -10px 0;
       overflow-wrap: break-word;
       width: calc(100% - 59px);
     }
 
     .item-edit {
-      margin: 8px 0 8px 8px;
+      margin: -2px -10px -2px 8px;
     }
   }
 
@@ -102,6 +98,7 @@ ul {
   border-radius: 4px;
   background: #ffffff;
   overflow: auto;
+  color: #495057;
 }
 
 .autocomplete-suggestion {
